Fix nav on mobile

--- a/src/styles/specifics.scss
+++ b/src/styles/specifics.scss
@@ -97,12 +97,6 @@ body {
   }
 }
 
-$navbar-default-bg: #26292e;
-$navbar-default-link-color: #ccc;
-$navbar-default-link-hover-color: #ff7857;
-$navbar-default-link-active-color: #ff7857;
-$navbar-default-link-active-bg: transparent;
-$navbar-default-color: #fff;
 .nav {
   position: relative;
   min-height: 50px;
@@ -111,6 +105,7 @@ $navbar-default-color: #fff;
   background-color: $navbar-default-bg;
   border-color: #17191c;
 }
+
 .nav--fixed-top {
   position: fixed;
   right: 0;
@@ -119,26 +114,34 @@ $navbar-default-color: #fff;
   border-width: 0 0 1px;
   z-index: 1030;
 }
+
 .nav__title {
+  margin-right: -15px;
   margin-left: -15px;
-  float: left;
-  font-size: 25px;
-  line-height: 28px;
-  padding: 11px 15px;
 
   & > a:any-link {
     text-decoration: none;
     color: #ccc;
+    float: left;
+    font-size: 25px;
+    line-height: 28px;
+    padding: 11px 15px;
     height: 50px;
   }
 }
+
+.nav__title:after {
+  clear: both;
+  content: " ";
+  display: table;
+}
+
 .nav__links {
-  float: left;
-  margin: 0;
+  // clear: both;
+  margin: 5.5px -15px;
   padding-left: 0;
   list-style: none;
   & > li {
-    float: left;
     &.active {
       & > a {
         color: #ff7857;
@@ -155,11 +158,47 @@ $navbar-default-color: #fff;
     }
   }
 }
-.collapse.collapse {
-  display: block !important;
-  height: auto !important;
-  padding-bottom: 0;
-  overflow: visible !important;
+.navbar-collapse {
+  margin-right: -15px;
+  margin-left: -15px;
+  padding-right: 15px;
+  padding-left: 15px;
+  border-top: 1px solid transparent;
+  border-color: #17191c;
+  box-shadow: inset 0 1px 0 hsla(0, 0%, 100%, .1);
+}
+@media (min-width: 768px) {
+  .nav__title {
+    margin-right: 0;
+    margin-left: 0;
+    float: left;
+  }
+  .nav__brand {
+    margin-left: -15px;
+  }
+  .nav__toggle {
+    display: none;
+  }
+  .nav__links {
+    float: left;
+    margin: 0;
+    & > li {
+      float: left;
+    }
+  }
+}
+
+.nav__toggle {
+  position: relative;
+  float: right;
+  margin-right: 15px;
+  padding: 9px 10px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
 
 #headshot {
